Create card row

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <div class="container-xxl">
           <a class="navbar-brand" href="#"
             ><svg
               width="150"
@@ -129,8 +129,8 @@
       </nav>
     </header>
     <section>
-      <div class="p-5 mb-4 bg-light rounded-3">
-        <div class="container-fluid py-5">
+      <div class="jumbotron p-5 mb-4 bg-light rounded-3">
+        <div class="container-xxl py-5">
           <h1 class="display-5 fw-bold">Tiki Taka</h1>
           <p class="col-md-8 fs-4">
             Las medias futsaleras que estabas esperando para romperla en tus
@@ -142,6 +142,50 @@
         </div>
       </div>
     </section>
-    <main></main>
+    <main>
+      <div class="container-xxl">
+        <div class="row">
+          <div class="col col-sm-12 col-md-6 col-xxl-4">
+            <div class="card">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col col-sm-12 col-md-6 col-xxl-4">
+            <div class="card">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col col-sm-12 col-md-6 col-xxl-4">
+            <div class="card">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  This is a longer card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
