--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary px-5 sticky-top">
         <div class="container-xxl">
           <a class="navbar-brand" href="#"
             ><svg
@@ -144,8 +144,8 @@
     </section>
     <main>
       <div class="container-xxl">
-        <div class="row">
-          <div class="col col-sm-12 col-md-6 col-xxl-4">
+        <div class="row gy-5">
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
             <div class="card">
               <img src="..." class="card-img-top" alt="..." />
               <div class="card-body">
@@ -158,7 +158,7 @@
               </div>
             </div>
           </div>
-          <div class="col col-sm-12 col-md-6 col-xxl-4">
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
             <div class="card">
               <img src="..." class="card-img-top" alt="..." />
               <div class="card-body">
@@ -171,7 +171,7 @@
               </div>
             </div>
           </div>
-          <div class="col col-sm-12 col-md-6 col-xxl-4">
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
             <div class="card">
               <img src="..." class="card-img-top" alt="..." />
               <div class="card-body">
